--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
   --logo-secondfooter-color: #ffffff;
   /* остальніе переменніе цвета */
 
-  --head-back-color: rgba(236, 236, 236, 1);
+  --head-back-color: #ffffff;
   --head-nav-color: #212121;
   --head-mailtel-color: #757575;
   --footer-back-color: #2f303a;
@@ -70,12 +70,10 @@ img {
 .head {
   background-color: var(--head-back-color);
 }
-header .container{ 
+header .container {
   display: flex;
-align-items: center;
-
+  align-items: center;
 }
-
 
 .LogoPosition {
   width: 145px;
@@ -103,7 +101,9 @@ align-items: center;
   letter-spacing: 0.03em;
   color: var(--logo-second-color);
 }
-.logonavflex { display: flex;}
+.logonavflex {
+  display: flex;
+}
 
 .TextNAV {
   font-family: "Roboto";
@@ -145,13 +145,23 @@ align-items: center;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--head-mailtel-color);
-  
 }
 .mit:hover {
   color: var(--link-active-color);
 }
-.mailmargin { margin-right: 40px;}
-.telmargin 
+.mailmargin {
+  margin-right: 40px;
+}
+
+.line {
+  width: 1600px;
+  height: 0px;
+  left: 0px;
+  top: 80px;
+  position: absolute;
+  border: 1px solid #ececec;
+}
+
 /* Ноги ----------------------*/
 
 .foot {
@@ -159,10 +169,13 @@ align-items: center;
 }
 
 .ulstyle2 {
-  list-style: none;}
+  list-style: none;
+}
 
-.logodown {margin-bottom: 28px;
-padding: 60px 0 0 0px; }
+.logodown {
+  margin-bottom: 28px;
+  padding: 60px 0 0 0px;
+}
 
 .logo3 {
   font-family: "Raleway";
@@ -172,7 +185,6 @@ padding: 60px 0 0 0px; }
   letter-spacing: 0.03em;
   color: var(--logo-secondfooter-color);
 }
-
 
 .Adress {
   font-family: "Roboto";
@@ -200,7 +212,9 @@ padding: 60px 0 0 0px; }
 .MiT:hover {
   color: var(--link-active-color);
 }
-.teldown{padding-bottom: 60px;}
+.teldown {
+  padding-bottom: 60px;
+}
 
 /* Майн веб--------------------------- */
 
@@ -217,13 +231,10 @@ padding: 60px 0 0 0px; }
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--main-HeroButtonText-color);
-  margin-bottom: 30px;
-  width: 696px;
-  height: 120px;
-  left: 452px;
-  top: 280px;
+  padding: 106px 252px 0 252px;
 }
 .Hbutton {
+  margin: 30px 485px 106px 485px;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -231,12 +242,11 @@ padding: 60px 0 0 0px; }
   color: var(--main-HeroText-color);
   background-color: var(--main-HeroButtonBack-color);
   cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
   text-align: center;
-  width: 161px;
-  height: 30px;
-  left: 720px;
-  top: 440px;
-
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .Hbutton:hover,
 .Hbutton:focus {
@@ -261,6 +271,14 @@ padding: 60px 0 0 0px; }
   color: var(--H2-H3-Text-color);
   margin-bottom: 10px;
 }
+
+.WW {
+  margin-right: 30px;
+}
+.LL {
+  margin-left: auto;
+}
+
 .WS1P {
   font-family: "Roboto";
   font-weight: 400;
@@ -276,6 +294,7 @@ padding: 60px 0 0 0px; }
 }
 
 .WS2h2 {
+  padding: 0 486px 0 486px;
   font-family: "Roboto";
   font-weight: 700;
   font-size: 36px;
@@ -283,6 +302,7 @@ padding: 60px 0 0 0px; }
   letter-spacing: 0.03em;
   color: var(--H2-H3-Text-color);
   margin-bottom: 50px;
+  padding: 0 485px 0 485px;
 }
 
 /* section 3------------------------------ */
@@ -303,9 +323,12 @@ padding: 60px 0 0 0px; }
   letter-spacing: 0.03em;
   color: var(--H2-H3-Text-color);
   margin-bottom: 50px;
+  padding: 0 502px 0 502px;
 }
+
 .imgworkers {
   margin-bottom: 30px;
+  border-radius: 0px;
 }
 
 .WS3h3 {
@@ -328,6 +351,11 @@ padding: 60px 0 0 0px; }
   letter-spacing: 0.03em;
   color: var(--P-Text-color);
 }
+.namesborder {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
 /*Portfolio  ------------------------------------*/
 
 .btnP {
@@ -345,11 +373,55 @@ padding: 60px 0 0 0px; }
   color: var(--portfolio-ButtonActive-color);
   background-color: var(--portfolio-BattonBack-color);
 }
+.b1 {
+  margin: 0 794px 0 327px;
+  padding: 6px 22px;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  margin-right: 8px;
+}
+.b2 {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  margin-right: 8px;
+  padding: 6px 22px;
+}
+.b3 {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  padding: 6px 22px;
+}
+
+.words5 {
+  margin-bottom: 53px;
+}
 
 /* section 2-----------------------------------------*/
 
 .PS2 {
   background-color: var(--main-Section1and2Back-color);
+}
+
+.ulstyle3 {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.imgtext {
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+}
+
+.img1 {
+  margin-bottom: 30px;
+  margin-right: 30px;
+}
+.img2 {
+  margin-right: 30px;
 }
 
 .PS2h3 {
