--- a/css/styles.css
+++ b/css/styles.css
@@ -350,6 +350,7 @@ header .container {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--P-Text-color);
+  padding-bottom: 30px;
 }
 .namesborder {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -414,6 +415,7 @@ header .container {
 .imgtext {
   background: #ffffff;
   border: 1px solid #eeeeee;
+  padding: 20px;
 }
 
 .img1 {
