--- a/css/styles.css
+++ b/css/styles.css
@@ -327,7 +327,6 @@ header .container {
 }
 
 .imgworkers {
-  margin-bottom: 30px;
   border-radius: 0px;
 }
 
@@ -356,6 +355,7 @@ header .container {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  padding-top: 30px;
 }
 /*Portfolio  ------------------------------------*/
 
